update register definitions
remove git dependency on rust-bitfield and start stabilising register definition

--- a/silica_arm_cortexm4/Cargo.toml
+++ b/silica_arm_cortexm4/Cargo.toml
@@ -6,4 +6,4 @@ authors = ["wilcha02"]
 [dependencies]
 silica = { path = "../silica" }
 #bitfield = "^0.12.1"
-bitfield = { path = "../rust-bitfield" }
+#bitfield = { path = "../rust-bitfield" }
